Updating assets and asset locations
Moved all assets into /assets folder (css and js)
Updated asset links
Added custom config to auto copy assets over

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,7 +9,8 @@
         {% render "favicons" %}
     </head>
     <body id="IOOBI9O4IEIEOIO4O4IB" data-bs-spy="scroll" data-bs-target="#navbarText" data-bs-smooth-scroll="true">
-        {% include "header" %}
+        {% include "nav" %}
+
         {{ content }}
 
         {% render "scripts" %}
