--- a/_includes/css.liquid
+++ b/_includes/css.liquid
@@ -1,6 +1,6 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Bootstrap Core -->
-        <link href="../css/bootstrap.css" rel="stylesheet">
+        <link href="./assets/css/bootstrap.css" rel="stylesheet">
         <!-- Core theme CSS -->
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="./assets/css/style.css" rel="stylesheet">
