--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -1,7 +1,7 @@
-<script src="./js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="./js/clip.js"></script>
-<script src="./js/rot.js"></script>
-<script src="./js/convrtrs.js"></script>
-<script src="./js/tools.js"></script>
-<script src="./js/decoders.js"></script>
-<script src="./js/scripts.js"></script>
+<script src="./assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="./assets/js/clip.js"></script>
+<script src="./assets/js/rot.js"></script>
+<script src="./assets/js/convrtrs.js"></script>
+<script src="./assets/js/tools.js"></script>
+<script src="./assets/js/decoders.js"></script>
+<script src="./assets/js/scripts.js"></script>
