--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,11 +1,13 @@
 
-<footer class="text-dark bg-light">
+<footer class="{% if page-id == "fourohfour" %}mt-auto {% endif %}text-dark bg-light">
     <div class="p-4 pb-2">
+        {% if page-id == "home" %}
         <p class="float-end mb-1">
             <a href="#IOOBI9O4IEIEOIO4O4IB" class="btn btn-secondary" title="Back to top">
                 <i class="bi bi-arrow-up-square"></i>
             </a>
         </p>
+        {% endif %}
         <p class="mb-1">
             &copy; @<a href="https://twitter.com/stickerboy" class="text-convrtr" title="Follow @stickerboy on Twitter">stickerboy</a> / <a href="https://www.kenny.cx/" title="kenny.cx - Personal website" class="text-convrtr">Kenny Cameron</a> 2024. <br />All Rights Reserved.
         </p>
