--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"{% if page-id == "fourohfour" %} class="h-100"{% endif %}>
     <head>
         {% render "meta" %}
         <title>{{ title }}</title>
@@ -8,37 +8,20 @@
         {% render "css" %}
         {% render "favicons" %}
     </head>
-    <body id="IOOBI9O4IEIEOIO4O4IB" data-bs-spy="scroll" data-bs-target="#navbarText" data-bs-smooth-scroll="true">
+    
+    <body id="IOOBI9O4IEIEOIO4O4IB" 
+          data-bs-spy="scroll" 
+          data-bs-target="#navbarText" 
+          data-bs-smooth-scroll="true"
+          {% if page-id == "fourohfour" %}class="d-flex flex-column h-100 top-0"{% endif %}>
+
         {% include "nav" %}
 
         {{ content }}
 
-        {% render "scripts" %}
+        {% include "footer" %}
+        {% include "scripts" %}
         {% render "toast" %}
     </body>
 </html>
-<!--
-//START FILE/ IETY JNM URER
-/Packet detected..
-/Processing......
-/Packet found:
-/UoneFVQVJFUoneFVQVJFUoneFVQVJFUEVOVEFTUVVBUkVFTEVQRUfiveUQUNBVFBFTlRBQzerolSQzeroxFUoneFVQVJFRknineYUEVOVEFDSVJDTEVTUVVBUkVOTzerofiveBUEVOVEFEVUFM==
-/END FILE ../
-MMMMMMMWKc;.                 ;cXWMMMMMMM
-MMMMMMWNK:.  .'''.......''.. .:NWMMMMMMM
-MMMMWWxo,. ,xKXKKK0000KKKXKd, .';oMWMMMM
-MMMWXNl'..ckKKOdl:;,,,;:lkKXOc. .:xXWMMM
-MMW0o;. 'dKX0o::lxOKXKOo,'lOXKd' .'lxWMM
-MWdo,..:kKKxc:xXXNNNNXXX0c.cOKKk:..,:oNM
-Kk'. .c0XXKc:OXXNNWWWNNXXO:.:KXX0c. ..KN
-kc. .cKXXXXKKNNWWWNNNNXX0d::dKXXXKc. .lO
-c.  ;kXNNNNNNNNNNNNNNKkl;;o0XXXXXKx;  .c
-0d. .c0XXNNWWWWWNNKOd;':dd:dKXXXX0c. .d0
-NKl, .:ONNNNNNNNNXo'.;ooxO0KXXXXO:. ',0N
-WWNx;. ,dKXNNNNNXK; ,;.;xKXXXXKx, .;okWM
-WWWOo:. .l0XXNNNNX:  .cOXXXXX0l. .:oxMMM
-WWWWWWo,..;kXXXXXKl':kKXXXXKx;..;oWWMMWW
-WWWWWWkl:. .l0KKKKK0KKKKKK0o. .:lkMMMMNN
-MWWWWWWWXl,  ..............  ,lNWMMMMMNN
-MWWWWWWWNd:.                .:oNWMMMMMWW
--->
+{% render "partials/routes/{{ page-id }}" %}
