Use package info across the site

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -4,7 +4,7 @@
         {% render "layout/meta" %}
         <title>{{ title }}</title>
 
-        <link rel="canonical" href="https://www.kenny.cx/convrtrjs">
+        <link rel="canonical" href="{{ pgk.homepage }}">
         {% render "layout/css" %}
         {% render "layout/favicons" %}
     </head>
