--- a/_includes/layout/favicons.liquid
+++ b/_includes/layout/favicons.liquid
@@ -13,7 +13,7 @@
         <link rel="icon" type="image/png" href="./assets/favicons/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="./assets/favicons/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="./assets/favicons/favicon-128.png" sizes="128x128" />
-        <meta name="application-name" content="Convrtr"/>
+        <meta name="application-name" content="{{ pkg.sitename }}"/>
         <meta name="msapplication-TileColor" content="#FFFFFF" />
         <meta name="msapplication-TileImage" content="./assets/favicons/mstile-144x144.png" />
         <meta name="msapplication-square70x70logo" content="./assets/favicons/mstile-70x70.png" />
