--- a/_includes/layout/meta.liquid
+++ b/_includes/layout/meta.liquid
@@ -1,4 +1,4 @@
 <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="Kenny Cameron / stickerboy">
+        <meta name="description" content="{{ pkg.description }}">
+        <meta name="author" content="{{ pkg.author }}">
