--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -2,7 +2,7 @@
     <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark bg-convrtr shadow-sm">
         <div class="container-fluid">
             <span class="navbar-brand text-white mb-0 h1 fw-normal">
-                Convrtr
+                {{ pkg.sitename }}
             </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" 
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,13 +32,13 @@
                     {% else %}
                     <ul class="navbar-nav me-auto mt-3 mt-md-0 mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="https://www.kenny.cx/convrtrjs/">Home</a>
+                            <a class="nav-link active" href="{{ pkg.homepage }}">Home</a>
                         </li>
                     </ul>
                     {% endif %}
                 </ul>
                 <span class="navbar-text text-white mx-0 mx-md-3">
-                    For everlost and Grollow!
+                    {{ pkg.tagline }}
                 </span>
                 {% if page-id == "home" %}
                 <div class="mt-3 mt-md-0">
