Simplify CSS and move away from styled IDs

--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -42,7 +42,7 @@
                 </span>
                 {% if page-id == "home" %}
                 <div class="mt-3 mt-md-0">
-                    <button type="button" class="btn btn-sm btn-outline-light" id="resetData" 
+                    <button type="button" class="btn btn-sm btn-outline-light btn-reset-data" id="resetData" 
                             aria-label="Clear all data inside textareas" title="Clear data"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
                         <i class="bi bi-arrow-clockwise"></i>
