--- a/scss/style.scss
+++ b/scss/style.scss
@@ -87,35 +87,40 @@ body {
       transform: rotate(360deg);
     }
 }
-#resetData {
+.btn-reset-data {
     display: flex;
     align-self: center;
     justify-self: baseline;
     --bs-btn-padding-y: 0.5rem;
-}
-#resetData .bi {
-    display: inline-flex;
-    align-self: center;
+
+    .bi {
+        display: inline-flex;
+        align-self: center;
+    }
 }
 
 .navbar {
     color: var(--bs-white);
-}
-.navbar-brand {
-    font-weight: 300;
-}
-.navbar-nav .nav-item {
-    align-items: center;
-}
-.navbar-nav .nav-link {
-    color: var(--bs-white);
-    padding: var(--convrtr-nav-link-padding-y) var(--convrtr-nav-link-padding-x);
-    border-radius: var(--bs-border-radius-sm);
-}
-.navbar-nav .show > .nav-link,
-.navbar-nav .nav-link.active {
-    color: var(--convrtr-bg-color-20);
-    background-color: var(--bs-navbar-active-color);
+
+    &-brand {
+        font-weight: 300;
+    }
+    &-nav,
+    &-item {
+        align-items: center;
+    }
+
+    .nav-link {
+        color: var(--bs-white);
+        padding: var(--convrtr-nav-link-padding-y) var(--convrtr-nav-link-padding-x);
+        border-radius: var(--bs-border-radius-sm);
+    }
+
+    .show > .nav-link,
+    .nav-link.active {
+        color: var(--convrtr-bg-color-20);
+        background-color: var(--bs-navbar-active-color);
+    }
 }
 
 textarea {
@@ -126,56 +131,64 @@ textarea {
     min-height: 2rem;
 }
 
-.page-item {
-    margin-bottom: 0.5rem;
-}
-.page-link {
-    width: 2.25rem;
-    color: var(--convrtr-bg-color);
-}
-.page-link:hover,
-.page-link:focus {
-    color: var(--convrtr-bg-color-10);
-}
-.page-link:focus {
-    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem var(--convrtr-bg-color-25-rgb);
-}
-.page-link.active {
-    background-color: var(--convrtr-bg-color);
-    border-color: var(--convrtr-bg-color-20);
-}
-.page-link.active:hover,
-.page-link.active:focus {
-    color: var(--bs-white);
-    border-color: var(--convrtr-bg-color-20);
+.page {
+    &-item {
+        margin-bottom: 0.5rem;
+    }
+    &-link {
+        width: 2.25rem;
+        color: var(--convrtr-bg-color);
+        &:hover,
+        &:focus {
+            color: var(--convrtr-bg-color-10);
+        }
+        &:focus {
+            --bs-pagination-focus-box-shadow: 0 0 0 0.25rem var(--convrtr-bg-color-25-rgb);
+        }
+        &.active {
+            background-color: var(--convrtr-bg-color);
+            border-color: var(--convrtr-bg-color-20);
+            &:hover,
+            &:focus {
+                color: var(--bs-white);
+                border-color: var(--convrtr-bg-color-20);
+            }
+        }
+    }
 }
 
 .form-check-input {
     height: 1.75rem;
 }
-.form-switch .form-check-input {
-    width: 3.5rem;
-    transition: background-position 0.3s ease-in-out, background-color 0.3s ease-in-out, border-color 0.3s ease-in-out, opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+.form-switch {
+    .form-check-input {
+        width: 3.5rem;
+        transition: background-position 0.3s ease-in-out, background-color 0.3s ease-in-out, border-color 0.3s ease-in-out, opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    }
+    .form-check-input:focus {
+        background-image: var(--convrtr-switch-thumb);
+        border-color: var(--convrtr-bg-color-50);
+        box-shadow: 0 0 0 0.25rem var(--convrtr-bg-color-25-rgb);
+    }
+    .form-check-input:checked:focus {
+        background-image: var(--convrtr-switch-checked);
+    }
 }
+
 .form-check-label {
     margin-left: 0.5rem;
     margin-top: 0.25rem;
 }
-.form-switch .form-check-input:focus {
-    background-image: var(--convrtr-switch-thumb);
-    border-color: var(--convrtr-bg-color-50);
-    box-shadow: 0 0 0 0.25rem var(--convrtr-bg-color-25-rgb);
-}
-.form-switch .form-check-input:checked:focus {
-    background-image: var(--convrtr-switch-checked);
-}
-.form-check-input:checked {
-    background-color: var(--convrtr-bg-color-25);
-    border-color: var(--convrtr-bg-color-20);
-}
-.form-check-input:active {
-    filter: none;
-    opacity: 0.75;
+.form-check-input {
+    &:checked {
+        background-color: var(--convrtr-bg-color-25);
+        border-color: var(--convrtr-bg-color-20);
+    }
+    &:active {
+        filter: none;
+        opacity: 0.75;
+    }    
 }
 
 .tab-content {
@@ -186,24 +199,26 @@ textarea {
     border-radius: var(--convrtr-nav-tabs-border-radius);    
 }
 
-#shiftTabs .nav-link {
-    color: var(--convrtr-bg-color);
-}
-#shiftTabs .nav-link.active {
-    color: var(--convrtr-base-color);
-    background-color: var(--convrtr-bg-color-25-rgb);
+.shift-tabs {
+    & .nav-link {
+        color: var(--convrtr-bg-color);
+        &.active {
+            color: var(--convrtr-base-color);
+            background-color: var(--convrtr-bg-color-25-rgb);
+        }
+    }
 }
 
-.toast{
+.toast {
     border-radius: var(--bs-toast-border-radius);
-}
-.toast-header {
-    border: none;
-}
-.toast-header .btn-close {
-    background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
-}
-.toast-body {
-    border-bottom-left-radius: var(--bs-toast-border-radius);
-    border-bottom-right-radius: var(--bs-toast-border-radius);
+    &-header {
+        border: none;
+        .btn-close {
+            background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+        }
+    }
+    &-body {
+        border-bottom-left-radius: var(--bs-toast-border-radius);
+        border-bottom-right-radius: var(--bs-toast-border-radius);
+    }
 }
