Bundle update - header
Added github url to package.json
Link to github in header
Some silly HTML swapping and class addition to ensure the placement of the button is where I want it (outside the navbar on mobile, inline with it on desktop)

Merrged bootstrap and site styles into 1, so I make use of BS mixins
Used the mixins to fix a minor alignment issue with the header on mobile - ultimately swapped to a grid based layout - saves a little space, looks better

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,19 @@
 /*!
 * Convrtr styles
 */
+@import "../node_modules/bootstrap-scss/functions";
+
+@import "../node_modules/bootstrap-scss/variables";
+@import "../node_modules/bootstrap-scss/variables-dark";
+
+@import "../node_modules/bootstrap-scss/maps";
+@import "../node_modules/bootstrap-scss/mixins";
+@import "../node_modules/bootstrap-scss/utilities";
+@import "../node_modules/bootstrap-scss/root";
+
+// Utilities
+@import "../node_modules/bootstrap-scss/utilities/api";
+
 :root {
     --convrtr-bg-color: #11806a;
     --convrtr-bg-color-rgb: 17, 128, 106;
@@ -105,9 +118,16 @@ body {
     &-brand {
         font-weight: 300;
     }
-    &-nav,
-    &-item {
-        align-items: center;
+    &-nav {
+        align-items: flex-start;
+        @include media-breakpoint-down(md) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 0 1rem;
+        }
+        @include media-breakpoint-up(md) { 
+            align-items: center;
+        }
     }
 
     .nav-link {
