--- a/_includes/layout/css.liquid
+++ b/_includes/layout/css.liquid
@@ -1,6 +1,4 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-        <!-- Bootstrap Core -->
-        <link href="../assets/css/bootstrap.css" rel="stylesheet">
-        <!-- Core theme CSS -->
-        <link href="../assets/css/style.css" rel="stylesheet">
+        <!-- Core theme and Bootstrap CSS -->
+        <link href="../assets/css/main.css" rel="stylesheet">
