--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -1,9 +1,13 @@
 <header>
     <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark bg-convrtr shadow-sm">
         <div class="container-fluid">
-            <span class="navbar-brand text-white mb-0 h1 fw-normal">
+            <span class="navbar-brand text-white mb-0 h1 fw-normal me-auto me-md-3">
                 {{ pkg.sitename }}
             </span>
+            <a class="btn btn-md btn-link text-light d-md-none" aria-label="Github" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Github" href="{{ pkg.repository.site }}">
+                <i class="bi bi-github"></i>
+                <span class="d-none mx-2">Github</span>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" 
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,8 +44,12 @@
                 <span class="navbar-text text-white mx-0 mx-md-3">
                     {{ pkg.tagline }}
                 </span>
+                <div class="d-md-inline-flex mt-2 mt-md-0 mx-0 mx-md-2">
+                    <a class="btn btn-md btn-link text-light d-none d-md-block" aria-label="Github" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Github" href="{{ pkg.repository.site }}">
+                        <i class="bi bi-github"></i>
+                        <span class="d-none mx-2">Github</span>
+                    </a>
                 {% if page-id == "home" %}
-                <div class="mt-3 mt-md-0">
                     <button type="button" class="btn btn-sm btn-outline-light btn-reset-data" id="resetData" 
                             aria-label="Clear all data inside textareas" title="Clear data"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
