--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -22,6 +22,9 @@
                         <a class="nav-link" href="#rotate">ROT <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">text</span></a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#vigenere">Vigenère <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">cipher</span></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#flip">Flip <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">text</span></a>
                     </li>
                     <li class="nav-item">
