Small change to navigation bar
To prevent overlap due the addition of Vigenère, dropped the "Home" text on larger screens in favor of a code icon, also has a tooltip enabled. On mobile this is hidden and Home is shown

--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -16,7 +16,7 @@
                 <ul class="navbar-nav me-auto mt-3 mt-md-0 mb-2 mb-md-0">
                     {% if page-id == "home" %}
                     <li class="nav-item">
-                        <a class="nav-link active" href="#convrtrs">Home</a>
+                        <a class="nav-link active" href="#convrtrs"><span class="bi bi-code-square fs-5 d-none d-md-flex" aria-label="Home" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Home"></span> <span class="d-sm-inline-flex d-md-none">Home</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#rotate">ROT <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">text</span></a>
