--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -1,5 +1,5 @@
 <section id="flip">
-    <div class="py-4 px-2 px-sm-4 bg-light">
+    <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="flipText">Flip text</label>
             <hr>
@@ -12,7 +12,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Flip Text</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: " title="Flip text upside down" rows="6" id="flipText" class="form-control flip-text"></textarea>
+                        <textarea placeholder="Example: TEST → ┴SƎ┴" title="Flip text upside down" rows="6" id="flipText" class="form-control flip-text"></textarea>
                     </div>
                     <div class="card-footer text-dark py-3">
                         <div class="d-flex justify-content-start align-items-center">
