--- a/_includes/partials/home/reversehex.liquid
+++ b/_includes/partials/home/reversehex.liquid
@@ -1,5 +1,5 @@
 <section id="reverseHex">
-    <div class="py-4 px-2 px-sm-4 bg-light">
+    <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="flipText">Reverse hex</label>
             <hr>
