--- a/_includes/partials/home/rotate.liquid
+++ b/_includes/partials/home/rotate.liquid
@@ -4,7 +4,7 @@
             <label class="display-6" for="rotText">Rotation cipher</label>
             <hr>
             <p class="text-dark px-2">
-                A very simple method of encription, rotaion ciphers - also known as substution of shift ciphers - replace letters with a different letter at another place in the alphabet. The most common is the Caeser cipher or Rot 13 cipher, more information is available on the <a href="https://en.wikipedia.org/wiki/Caesar_cipher" class="">Caesar_cipher</a> Wikipedia page. 
+                A very simple method of encription, rotaion ciphers - also known as substution of shift ciphers - replace letters with a different letter at another place in the alphabet. The most common is the Caeser cipher or Rot 13 cipher, more information is available on the <a href="https://en.wikipedia.org/wiki/Caesar_cipher" class="text-convrtr">Caesar_cipher</a> Wikipedia page. 
             </p>
         </div>
         <ul class="pagination justify-content-center flex-wrap" id="pagination">
@@ -102,7 +102,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">ROT Cipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: " title="ROT Text - text to substitute" rows="6" id="rotText" class="form-control rot-text"></textarea>
+                        <textarea placeholder="Example: TEST → YJXY (Rot 5)" title="ROT Text - text to substitute" rows="6" id="rotText" class="form-control rot-text"></textarea>
                     </div>
                     <div class="card-footer text-dark py-3">
                         <div class="d-flex justify-content-between align-items-center">
