--- a/_includes/partials/home/convrtrs.liquid
+++ b/_includes/partials/home/convrtrs.liquid
@@ -1,5 +1,5 @@
 <section id="convrtrs">
-    <div class="convrtrs py-4 px-2 px-sm-4 bg-light">
+    <div class="py-4 px-2 px-sm-4 bg-light">
         <div class="section-heading">
             <h1 class="display-6">Convrtrs</h1>
             <hr>
