Simplify section styling and clean up home
Move home into its own partial and include
Remove bg-light class in favor of a new section class, which auto-alternates the background color
Fix missing section tag in convrtrs partial

--- a/_includes/partials/home/reversehex.liquid
+++ b/_includes/partials/home/reversehex.liquid
@@ -1,4 +1,4 @@
-<section id="reverseHex">
+<section id="reverseHex" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="flipText">Reverse hex</label>
