--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -1,5 +1,5 @@
-<section id="tools">
-    <div class="py-4 px-2 px-sm-4 bg-light">
+<section id="tools" class="section">
+    <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="toolsTextarea">Text tools</label>
             <hr>
