--- a/scss/style.scss
+++ b/scss/style.scss
@@ -154,6 +154,11 @@ body {
     }
 }
 
+.section:nth-of-type(odd) {
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+}
+
 textarea {
     background-color: var(--convrtr-textarea);
 }
