--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -1,4 +1,4 @@
-<section id="flip">
+<section id="flip" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="flipText">Flip text</label>
