--- a/_includes/partials/home/rotate.liquid
+++ b/_includes/partials/home/rotate.liquid
@@ -1,4 +1,4 @@
-<section id="rotate">
+<section id="rotate" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="rotText">Rotation cipher</label>
