--- a/_includes/partials/home/shift.liquid
+++ b/_includes/partials/home/shift.liquid
@@ -1,5 +1,5 @@
-<section id="shift">
-    <div class="py-4 px-2 px-sm-4 bg-light">
+<section id="shift" class="section">
+    <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="shiftText">Shift hex</label>
             <hr>
