--- a/_includes/partials/home/vigenere.liquid
+++ b/_includes/partials/home/vigenere.liquid
@@ -1,5 +1,5 @@
-<section id="vigenere">
-    <div class="py-4 px-2 px-sm-4 bg-light">
+<section id="vigenere" class="section">
+    <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="vigenereText">Vigenère cipher</label>
             <hr>
