Added table support and custom styling for a hash table
Ensures that long lines don't break responsive tables

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -245,6 +245,12 @@ textarea {
     }
 }
 
+.hash-table {
+    td {
+        word-break: break-all;
+    }
+}
+
 .toast {
     border-radius: var(--bs-toast-border-radius);
     &-header {
