--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -7,6 +7,7 @@
 @import "../node_modules/bootstrap-scss/variables";
 @import "../node_modules/bootstrap-scss/variables-dark";
 
+
 @import "../node_modules/bootstrap-scss/maps";
 @import "../node_modules/bootstrap-scss/mixins";
 @import "../node_modules/bootstrap-scss/utilities";
@@ -16,6 +17,7 @@
 @import "../node_modules/bootstrap-scss/type";
 @import "../node_modules/bootstrap-scss/containers";
 @import "../node_modules/bootstrap-scss/grid";
+@import "../node_modules/bootstrap-scss/tables";
 @import "../node_modules/bootstrap-scss/forms";
 @import "../node_modules/bootstrap-scss/buttons";
 @import "../node_modules/bootstrap-scss/transitions";
