Set up hash generator using Crypto
Pulling from CDN because it's the easiest way to import it for now.

This will generate a number of different hashes for a given string.

--- a/_includes/layout/scripts.liquid
+++ b/_includes/layout/scripts.liquid
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 <script src="../assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 {% if page-id == "home" %}
 <script src="../assets/js/clip.js"></script>
