Hash placement and updates
Move Hash to Ciphers area
Add to menu
Fix associated IDs

--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -61,6 +61,9 @@
                             <li>
                                 <a class="dropdown-item" href="#vigenere">Vigenère cipher</a>
                             </li>
+                            <li>
+                                <a class="dropdown-item" href="#hash">Hash algorithms</a>
+                            </li>
                         </ul>
                     </li>
                     {% else %}
