--- a/_includes/partials/home/hash.liquid
+++ b/_includes/partials/home/hash.liquid
@@ -1,4 +1,4 @@
-<section id="flip" class="section">
+<section id="hash" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <label class="display-6" for="hashText">Hash</label>
@@ -12,15 +12,11 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Hash text</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: " title="Generate hash values for a string" rows="6" id="hashText" class="form-control flip-text"></textarea>
+                        <textarea placeholder="Example: " title="Generate hash values for a string" rows="6" id="hashText" class="form-control hash-text"></textarea>
                     </div>
                     <div class="card-footer text-dark py-3">
                         <div class="d-flex justify-content-start align-items-center">
                             <button type="button" class="btn btn-md btn-convrtr" id="hashDecode" title="Generate hashes">Hash</button>
-                            <!-- <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="flipDirection">
-                                <label class="form-check-label" for="flipDirection">Reverse</label>
-                            </div> -->
                             <div class="btn-group ms-auto">
                                 <button type="button" class="btn btn-md btn-light btn-select" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Select All" data-bs-original-title="Select All"><i class="bi bi-check2-square"></i></button>
                                 <button type="button" class="btn btn-md btn-light btn-copy" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="Copy to clipboard" data-bs-original-title="Copy to clipboard"><i class="bi bi-clipboard"></i></button>
