Change targeting on hash table
Add some spacing too

--- a/_includes/partials/home/hash.liquid
+++ b/_includes/partials/home/hash.liquid
@@ -24,7 +24,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div class="data-to-copy active table-responsive">
+                        <div class="table-responsive">
                             <table class="table table-striped hash-table">
                                 <thead class="table-success">
                                     <tr>
@@ -32,7 +32,7 @@
                                         <th scope="col">Value</th>
                                     </tr>
                                 </thead>
-                                <tbody id="hashResults"></tbody>
+                                <tbody class="data-to-copy active" id="hashResults"></tbody>
                             </table>
                         </div>
                     </div>
