--- a/_includes/partials/home/frequencies.liquid
+++ b/_includes/partials/home/frequencies.liquid
@@ -23,7 +23,9 @@
                             </div>
                         </div>
                         <hr />
-                        <div class="data-to-copy active row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4" id="freqResults"></div>
+                        <div class="data-to-copy active">
+                            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4 my-1" id="freqResults"></div>
+                        </div>
                     </div>
                 </div>
             </div>
