Enable CSS grid support

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -7,6 +7,7 @@
 @import "../node_modules/bootstrap-scss/variables";
 @import "../node_modules/bootstrap-scss/variables-dark";
 
+$enable-cssgrid: true;
 
 @import "../node_modules/bootstrap-scss/maps";
 @import "../node_modules/bootstrap-scss/mixins";
