--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -33,6 +33,9 @@
                             <li>
                                 <a class="dropdown-item" href="#flip">Flip text</a>
                             </li>
+                            <li>
+                                <a class="dropdown-item" href="#freq">Character frequencies</a>
+                            </li>
                         </ul>
                     </li>
                     <!-- Hex tools -->
