--- a/_includes/partials/home/frequencies.liquid
+++ b/_includes/partials/home/frequencies.liquid
@@ -23,8 +23,8 @@
                             </div>
                         </div>
                         <hr />
-                        <div class="data-to-copy active">
-                            <div class="grid g-4 my-1" id="freqResults"></div>
+                        <div class="">
+                            <div class="grid g-4 my-1 data-to-copy active" id="freqResults"></div>
                         </div>
                     </div>
                 </div>
