--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -14,67 +14,67 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mt-3 mt-md-0 mb-2 mb-md-0">
-                    {% if page-id == "home" %}
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link active" href="#home"><span class="bi bi-house fs-5 d-none d-md-flex" role="generic" aria-label="Converters" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Converters"></span> <span class="d-sm-inline-flex d-md-none">Convrtrs</span></a>
-                    </li> -->
-                    <!-- Text tools -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Text <span class="d-sm-inline-flex d-md-none d-lg-inline-flex ms-1 me-auto">tools</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item" href="#home">Convrtrs</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#tools">Text tools</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#flip">Flip text</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#freq">Character frequencies</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- Hex tools -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Hex <span class="d-sm-inline-flex d-md-none d-lg-inline-flex ms-1 me-auto">tools</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item" href="#shift">Shift hex</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#reverseHex">Reverse hex</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- Ciphers -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Cipher<span class="d-none d-md-inline-flex d-lg-none">s</span> <span class="d-sm-inline-flex d-md-none d-lg-inline-flex ms-1 me-auto">tools</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item" href="#rotate">ROT text</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#vigenere">Vigenère cipher</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#hash">Hash algorithms</a>
-                            </li>
-                        </ul>
-                    </li>
-                    {% else %}
+                    {% if page-id == "fourohfour" %}
                     <ul class="navbar-nav me-auto mt-3 mt-md-0 mb-2 mb-md-0">
                         <li class="nav-item">
                             <a class="nav-link active" href="{{ pkg.homepage }}">Home</a>
                         </li>
                     </ul>
+                    {% else %}
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link active" href="#home"><span class="bi bi-house fs-5 d-none d-md-flex" role="generic" aria-label="Converters" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Converters"></span> <span class="d-sm-inline-flex d-md-none">Convrtrs</span></a>
+                    </li> -->
+                    <!-- Text tools -->
+                    <li class="nav-item dropdown{% if page-id == 'home' %} active{% endif %}">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Text <span class="d-sm-inline-flex d-md-none d-lg-inline-flex ms-1 me-auto">tools</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="../#home">Convrtrs</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../#tools">Text tools</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../#flip">Flip text</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../#freq">Character frequencies</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <!-- Hex tools -->
+                    <li class="nav-item dropdown{% if page-id == 'hex' %} active{% endif %}">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Hex <span class="d-sm-inline-flex d-md-none d-lg-inline-flex ms-1 me-auto">tools</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="../hex/#shift">Shift hex</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../hex/#reverseHex">Reverse hex</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <!-- Ciphers -->
+                    <li class="nav-item dropdown{% if page-id == 'ciphers' %} active{% endif %}">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Cipher<span class="d-none d-md-inline-flex d-lg-none">s</span> <span class="d-sm-inline-flex d-md-none d-lg-inline-flex ms-1 me-auto">tools</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="../ciphers/#rotate">ROT text</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../ciphers/#vigenere">Vigenère cipher</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="../ciphers/#hash">Hash algorithms</a>
+                            </li>
+                        </ul>
+                    </li>
                     {% endif %}
                 </ul>
                 <span class="navbar-text text-white mx-0 mx-md-3">
