Further split of JS assets
Core: included on all pages
Other folders are for each page
Updated config to match structure

--- a/_includes/layout/scripts.liquid
+++ b/_includes/layout/scripts.liquid
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
-<script src="../assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="../assets/js/core/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 {% if page-id == "fourohfour" %}
 {% else %}
 <script src="../assets/js/rot.js"></script>
@@ -8,7 +8,7 @@
 <script src="../assets/js/tools.js"></script>
 <script src="../assets/js/scripts.js"></script>
 {% if page-id == "home" %}
-<script src="../assets/js/convrtrs.js"></script>
+<script src="../assets/js/home/convrtrs.js"></script>
 {% endif %}
-<script src="../assets/js/{{ page-id }}.js"></script>
+<script src="../assets/js/{{ page-id }}/{{ page-id }}.js"></script>
 {% endif %}
