Rename header partial to title

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -2,12 +2,11 @@
 <html lang="en"{% if page-id == "fourohfour" %} class="h-100"{% endif %}>
     <head>
         {% include "layout/meta" %}
-        {% include "layout/header" %}
+        {% include "layout/title" %}
 
         {% render "layout/css" %}
         {% include "layout/favicons" %}
     </head>
-    
     <body id="IOOBI9O4IEIEOIO4O4IB" 
           {% if page-id == "fourohfour" %}class="d-flex flex-column h-100 top-0"{% endif %}>
 
