Support data clearing on all pages
Additionally add support for clearing from inputs, to catch things like keys

--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -85,7 +85,7 @@
                         <i class="bi bi-github"></i>
                         <span class="d-none mx-2">Github</span>
                     </a>
-                {% if page-id == "home" %}
+                {% if page-id != "fourohfour" %}
                     <button type="button" class="btn btn-sm btn-outline-light btn-reset-data" id="resetData" 
                             aria-label="Clear all data inside textareas" title="Clear data"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
