--- a/_includes/layout/scripts.liquid
+++ b/_includes/layout/scripts.liquid
@@ -1,7 +1,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 <script src="../assets/js/core/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-{% if page-id == "fourohfour" %}
-{% else %}
+{% if page-id != "fourohfour" %}
 <script src="../assets/js/rot.js"></script>
 <script src="../assets/js/clip.js"></script>
 <script src="../assets/js/toolkit.js"></script>
