Added some additional breakpoints
On larger screens, things like converters and other grid items get a bit... weird looking. They stretch out way too far. Adjusted the grid sizes for these to work a little better

--- a/_includes/partials/home/convrtrs.liquid
+++ b/_includes/partials/home/convrtrs.liquid
@@ -8,7 +8,7 @@
         <div class="grid g-3">
         {% for tool in convrtrs %}
         {% if convrtrs.length %}
-        <div class="g-col-12 g-col-md-6 g-col-lg-4">
+        <div class="g-col-12 g-col-md-6 g-col-lg-4 g-col-hd-3 g-col-hd-3 g-col-uhd-3">
             <div class="card shadow-sm" id="convrtr-{{ tool.id }}">
                 <div class="card-body">
                     <div class="card-title d-flex align-items-center">
