--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -9,6 +9,15 @@
 
 $enable-cssgrid: true;
 
+$large-grid-breakpoints: (
+  xxxl: 1600px,
+  hd: 1920px,
+  uhd: 1920px,
+  qhd: 2160px
+);
+
+$grid-breakpoints: map-merge($grid-breakpoints, $large-grid-breakpoints);
+
 @import "../node_modules/bootstrap-scss/maps";
 @import "../node_modules/bootstrap-scss/mixins";
 @import "../node_modules/bootstrap-scss/utilities";
