--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -1,20 +1,22 @@
 <footer class="{% if page-id == "fourohfour" %}mt-auto {% endif %}text-dark bg-light">
-    <div class="p-4 pb-2">
-        {% if page-id == "home" %}
-        <p class="float-end mb-1">
-            <a href="#IOOBI9O4IEIEOIO4O4IB" class="btn btn-secondary" title="Back to top">
-                <i class="bi bi-arrow-up-square"></i>
-            </a>
-        </p>
-        {% endif %}
-        <p class="mb-1">
-            &copy; <a href="{{ pkg.authorUrl }}" title="{{ pkg.authorDesc }}" class="text-convrtr">{{ pkg.author }}</a> {{ page.date | date: '%Y' }}. All Rights Reserved.<br />
-            Powered by <a href="https://www.11ty.dev/" title="Eleventy, a simpler static site generator" class="text-convrtr">11ty</a>, <a href="https://getbootstrap.com/" title="Bootstrap - an HTML, CSS, and JS library" class="text-convrtr">Bootstrap</a> and <a href="https://pages.github.com/" title="Github pages - websites hosted directly from your GitHub repository" class="text-convrtr">Github Pages</a>
-        </p>
-    </div>
-    <div class="p-4 pt-2">
-        <abbr title="Release version: v{{ pkg.version }}" class="d-inline-flex px-2 py-1 fw-semibold text-dark bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
-            <small>v{{ pkg.version }}</small>
-        </abbr>
+    <div class="mw me-auto ms-auto">
+        <div class="p-4 pb-2">
+            {% if page-id == "home" %}
+            <p class="float-end mb-1">
+                <a href="#IOOBI9O4IEIEOIO4O4IB" class="btn btn-secondary" title="Back to top">
+                    <i class="bi bi-arrow-up-square"></i>
+                </a>
+            </p>
+            {% endif %}
+            <p class="mb-1">
+                &copy; <a href="{{ pkg.authorUrl }}" title="{{ pkg.authorDesc }}" class="text-convrtr">{{ pkg.author }}</a> {{ page.date | date: '%Y' }}. All Rights Reserved.<br />
+                Powered by <a href="https://www.11ty.dev/" title="Eleventy, a simpler static site generator" class="text-convrtr">11ty</a>, <a href="https://getbootstrap.com/" title="Bootstrap - an HTML, CSS, and JS library" class="text-convrtr">Bootstrap</a> and <a href="https://pages.github.com/" title="Github pages - websites hosted directly from your GitHub repository" class="text-convrtr">Github Pages</a>
+            </p>
+        </div>
+        <div class="p-4 pt-2">
+            <abbr title="Release version: v{{ pkg.version }}" class="d-inline-flex px-2 py-1 fw-semibold text-dark bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
+                <small>v{{ pkg.version }}</small>
+            </abbr>
+        </div>
     </div>
 </footer>
