--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -1,6 +1,6 @@
 <header>
     <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark bg-convrtr shadow-sm">
-        <div class="container-fluid">
+        <div class="container-fluid mw">
             <span class="navbar-brand text-white mb-0 h1 fw-normal me-auto me-md-3">
                 {{ pkg.sitename }}
             </span>
