Fix breakpoint sizes and names

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -11,9 +11,9 @@ $enable-cssgrid: true;
 
 $large-grid-breakpoints: (
   xxxl: 1600px,
-  hd: 1920px,
-  uhd: 1920px,
-  qhd: 2160px
+  fhd: 1920px,
+  2k: 2048px,
+  qhd: 2560px
 );
 
 $grid-breakpoints: map-merge($grid-breakpoints, $large-grid-breakpoints);
