Add back to top button to all pages (except 404)

--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -1,7 +1,7 @@
 <footer class="{% if page-id == "fourohfour" %}mt-auto {% endif %}text-dark bg-light">
     <div class="mw me-auto ms-auto">
         <div class="p-4 pb-2">
-            {% if page-id == "home" %}
+            {% if page-id != "fourohfour" %}
             <p class="float-end mb-1">
                 <a href="#IOOBI9O4IEIEOIO4O4IB" class="btn btn-secondary" title="Back to top">
                     <i class="bi bi-arrow-up-square"></i>
